@@ -13,6 +13,7 @@ Bug Fixes::
     * compiler: CLI return code fixed
     * compiler: handle varPtr in BinOp expressions
     * ide: do not crash if non-existing file is specified as cmd line argument
+    * runtime: fix _aqb shutdown crash
 
 == 0.7.0alpha2
 
